# VideoDB

./: .gitattributes  .gitignore  README.md
CppMT/: CMT.cpp  CMakeLists.txt  ObjectTracking.cpp  ObjectTracking.h  main.cpp
stormcv/: build.gradle  pom.xml  settings.gradle
stormcv-deploy/: collect-data.sh  pom.xml
stormcv-deploy/src/main/java/nl/tno/stormcv/deploy/: BatchDNNTopology.java  CaptionerTopology.java  DNNTopology.java  DeploymentTopology.java  E1_GrayScaledTopology.java  E3_MultipleFeaturesTopology.java  E4_SequentialFeaturesTopology.java  E5_DNNTopology.java  LoopTopology.java  ObjTrackingTopology.java  SplitDNNTopology.java  SpoutOnly.java
stormcv-deploy/src/main/java/nl/tno/stormcv/utils/: OpBuilder.java
stormcv-deploy/src/main/resources/data/: bvlc_googlenet.prototxt  s2vt_vgg_rgb.caffemodel
stormcv-examples/: pom.xml
stormcv-examples/src/main/java/nl/tno/stormcv/example/: E2_FacedetectionTopology.java  E3_MultipleFeaturesTopology.java  E4_SequentialFeaturesTopology.java
stormcv-standalone/: .gitignore  build.gradle  settings.gradle
stormcv-standalone/gradle/wrapper/: gradle-wrapper.properties
stormcv-standalone/src/main/java/xyz/unlimitedcodeworks/: Standalone.java
stormcv/gradle/wrapper/: gradle-wrapper.properties
stormcv/src/main/java/nl/tno/stormcv/: StormCVConfig.java
stormcv/src/main/java/nl/tno/stormcv/batcher/: RandomBatcher.java  SimpleBatcher.java  SlidingWindowBatcher.java
stormcv/src/main/java/nl/tno/stormcv/bolt/: BatchInputBolt.java  CVParticleBolt.java  SingleInputBolt.java
stormcv/src/main/java/nl/tno/stormcv/fetcher/: FileFrameFetcher.java  RefreshingImageFetcher.java  StreamFrameFetcher.java
stormcv/src/main/java/nl/tno/stormcv/grouping/: StrongFieldGrouping.java
stormcv/src/main/java/nl/tno/stormcv/model/: CVParticle.java  Descriptor.java  Feature.java  Frame.java  GroupOfFrames.java  VideoChunk.java
stormcv/src/main/java/nl/tno/stormcv/operation/: BackgroundSubtractionOp.java  CaptionerOp.java  ColorHistogramOp.java  DnnClassifyOp.java  DnnForwardOp.java  DrawFeaturesOp.java  FeatureCombinerOp.java  FeatureExtractionOp.java  HaarCascadeOp.java  MjpegStreamingOp.java  ObjectTrackingOp.java  OpenCVOp.java  OpticalFlowOp.java  ResultSinkOp.java  ScaleImageOp.java  SequentialFrameOp.java  SimpleBatchOp.java  SimpleLoopOp.java
stormcv/src/main/java/nl/tno/stormcv/spout/: CVParticleSpout.java
stormcv/src/main/java/nl/tno/stormcv/util/: ImageUtils.java  JniUtils.java  MatFeatureUtils.java  NativeUtils.java  ResourceLoader.java  StreamReader.java
stormcv/src/main/java/nl/tno/stormcv/util/connector/: FtpConnector.java
stormcv/src/main/java/xyz/unlimitedcodeworks/opencv/dnn/: ForwardNet.java
stormcv/src/main/java/xyz/unlimitedcodeworks/operations/extra/: CMTTracker.java  Captioner.java  DescriptorExtractorX.java  FeatureDetectorX.java  ForwardNet.java
stormcv/src/main/java/xyz/unlimitedcodeworks/utils/: ResourceLoader.java  Timing.java
stormcv/src/main/jni/: CMakeLists.txt  DescriptorExtractorX.cpp  DescriptorExtractorX.h  FeatureDetectorX.cpp  FeatureDetectorX.h  ForwardNet.cpp  ForwardNet.h  ForwardNetCV.cpp  ForwardNetCV.h  ForwardNetCaffe.cpp  ForwardNetCaffe.h  GPUUtils-dummy.c  GPUUtils.cu  GPUUtils.h  IForwardNet.h  JniCMTTracker.cpp  JniDescriptorExtractorX.cpp  JniFeatureDetectorX.cpp  JniForwardNet.cpp  JniS2VT.cpp  JniThreadUtils.cpp  ThreadUtils.cpp  ThreadUtils.h  fc7FrameSequenceGenerator.cpp  fc7FrameSequenceGenerator.h  jni_helper.cpp  jni_helper.h  s2vt.cpp  s2vt.h  stormcv-jni.sublime-project
stormcv/src/main/jni/CppMT/: CMT.cpp  CMT.h  CMakeLists.txt  Consensus.cpp  Consensus.h  Fusion.cpp  Fusion.h  Matcher.cpp  Matcher.h  ObjectTracking.cpp  ObjectTracking.h  Tracker.cpp  Tracker.h  main.cpp
stormcv/src/main/jni/CppMT/fastcluster/: fastcluster.h
stormcv/src/main/jni/cv/: converters.cpp  converters.h  features2d_converters.cpp  features2d_converters.h
stormcv/src/main/jni/mdnet/: commands  libmdnet.cpp  libmdnet.h  mdnet.cpp
stormcv/src/main/jni/resources/: compile  compile.sh  googlenetRun.sh
stormcv/src/main/jni/test/: CMakeCache.txt  ForwardNet  Makefile  cmake_install.cmake
